# file-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.txt
demo/: CMakeLists.txt  main.cpp
demo/scripts/: destroy_not_existing.txt  file_index_consistency.txt  init_save.txt  no_blocks.txt  oft_max_size.txt  read_after_file_end.txt  read_empty_file.txt  sample.txt  small_blocks.txt
src/: fs.cpp  fs.hpp  fs_BACKUP_73999.hpp  fs_REMOTE_73999.hpp  fs_shell.hpp  fs_utils.cpp  io.hpp
